# cmake_project_template

./: README.md
app/: CMakeLists.txt
app/src/: CMakeLists.txt  main.cpp
mylibrary/: CMakeLists.txt
mylibrary/cmake/: Config.cmake.in  MyLibraryConfig.cmake.in
mylibrary/include/cuas/service/: client.h  server.h
mylibrary/include/mylibrary/: my_class.h
mylibrary/proto/: CMakeLists.txt
mylibrary/proto/cmake/: MyLibraryProtoConfig.cmake.in
mylibrary/src/: my_class.cpp
mylibrary/test/: test_main.cpp
myproto/: CMakeLists.txt
myproto/cmake/: MyProtoConfig.cmake.in
myproto/src/: service.proto
